--- a/platform-bom/pom.xml
+++ b/platform-bom/pom.xml
@@ -108,7 +108,7 @@
 		<javax-enterprise-concurrent.version>1.0</javax-enterprise-concurrent.version>
 		<javax-faces.version>2.2</javax-faces.version>
 		<javax-inject.version>1</javax-inject.version>
-		<javax-jax-rs.version>1.0</javax-jax-rs.version>
+		<javax-jax-rs.version>2.0.1</javax-jax-rs.version>
 		<javax-jdo.version>3.0.1</javax-jdo.version>
 		<javax-jsp.version>2.2.1</javax-jsp.version>
 		<javax-jstl.version>1.2.1</javax-jstl.version>
@@ -684,7 +684,7 @@
 			</dependency>
 			<dependency>
 				<groupId>javax.ws.rs</groupId>
-				<artifactId>jsr311-api</artifactId>
+				<artifactId>javax.ws.rs-api</artifactId>
 				<version>${javax-jax-rs.version}</version>
 			</dependency>
 			<dependency>
