--- a/platform-definition.yaml
+++ b/platform-definition.yaml
@@ -442,6 +442,7 @@ platform_definition:
     'javax.transaction:transaction-api': 'javax.transaction:javax.transaction-api' # See https://github.com/spring-projects/spring-data-neo4j/issues/272
     'javax.servlet:jsp-api': 'javax.servlet.jsp:javax.servlet.jsp-api'
     'javax.servlet:servlet-api': 'javax.servlet:javax.servlet-api'
+    'javax.ws.rs:jsr311-api': 'javax.ws.rs:javax.ws.rs-api'
     'org.apache.tomcat:catalina': 'org.apache.tomcat:tomcat-catalina'
     'org.jdom:jdom': 'org.jdom:jdom2'
     'org.projectreactor:reactor-tcp': 'org.projectreactor:reactor-net'
