--- a/platform-definition.yaml
+++ b/platform-definition.yaml
@@ -467,7 +467,10 @@ platform_definition:
       - 'ch.qos.logback:logback-access'
       - 'com.fasterxml.jackson.dataformat:jackson-dataformat-csv'
       - 'com.fasterxml.jackson.dataformat:jackson-dataformat-yaml'
+      - 'com.fasterxml.jackson.datatype:jackson-datatype-hibernate5'
+      - 'com.fasterxml.jackson.datatype:jackson-datatype-jdk7'
       - 'com.fasterxml.jackson.datatype:jackson-datatype-jdk8'
+      - 'com.fasterxml.jackson.module:jackson-module-parameter-names'
       - 'com.github.mxab.thymeleaf.extras:thymeleaf-extras-data-attribute'
       - 'com.jayway.jsonpath:json-path-assert'
       - 'com.zaxxer:HikariCP'
