--- a/platform-definition.yaml
+++ b/platform-definition.yaml
@@ -37,7 +37,7 @@ platform_definition:
           - jdk8
     - name: Spring AMQP
       groupId: org.springframework.amqp
-      version: 1.5.0.M1
+      version: 1.5.0.RC1
       modules:
         - spring-amqp
         - spring-rabbit
@@ -209,7 +209,7 @@ platform_definition:
         - spring-data-solr
     - name: Spring Framework
       groupId: org.springframework
-      version: 4.2.0.RELEASE
+      version: 4.2.1.BUILD-SNAPSHOT
       modules:
         - spring-aop
         - spring-aspects
@@ -238,7 +238,7 @@ platform_definition:
         - spring-hateoas
     - name: Spring Integration
       groupId: org.springframework.integration
-      version: 4.2.0.BUILD-SNAPSHOT
+      version: 4.2.0.RC1
       build:
         compileWith: jdk8
         runTestsWith:
