--- a/platform-bom/pom.xml
+++ b/platform-bom/pom.xml
@@ -67,7 +67,6 @@
 		<cassandra-driver.version>2.0.9.2</cassandra-driver.version>
 		<castor.version>1.3.3</castor.version>
 		<commonj.version>1.1.1</commonj.version>
-		<commons-beanutils-core.version>1.8.3</commons-beanutils-core.version>
 		<commons-cli.version>1.2</commons-cli.version>
 		<commons-codec.version>1.10</commons-codec.version>
 		<commons-configuration.version>1.6</commons-configuration.version>
@@ -176,6 +175,7 @@
 		<tyrus.version>1.3.5</tyrus.version>
 		<typica.version>1.3</typica.version>
 		<velocity-tools-view.version>1.4</velocity-tools-view.version>
+		<webjars-json-editor.version>0.7.21</webjars-json-editor.version>
 		<webjars-locator.version>0.22</webjars-locator.version>
 		<websphere-uow.version>6.0.2.17</websphere-uow.version>
 		<woodstox.version>4.2.1</woodstox.version>
@@ -530,11 +530,6 @@
 				<groupId>com.yammer.metrics</groupId>
 				<artifactId>metrics-core</artifactId>
 				<version>${yammer-metrics.version}</version>
-			</dependency>
-			<dependency>
-				<groupId>commons-beanutils</groupId>
-				<artifactId>commons-beanutils-core</artifactId>
-				<version>${commons-beanutils-core.version}</version>
 			</dependency>
 			<dependency>
 				<groupId>commons-cli</groupId>
@@ -1125,6 +1120,11 @@
 				<groupId>org.webjars</groupId>
 				<artifactId>webjars-locator</artifactId>
 				<version>${webjars-locator.version}</version>
+			</dependency>
+			<dependency>
+				<groupId>org.webjars</groupId>
+				<artifactId>json-editor</artifactId>
+				<version>${webjars-json-editor.version}</version>
 			</dependency>
 			<dependency>
 				<groupId>org.xerial.snappy</groupId>
