--- a/platform-bom/pom.xml
+++ b/platform-bom/pom.xml
@@ -6,7 +6,7 @@
 	<parent>
 		<groupId>org.springframework.boot</groupId>
 		<artifactId>spring-boot-starter-parent</artifactId>
-		<version>1.2.5.RELEASE</version>
+		<version>1.2.6.RELEASE</version>
 		<relativePath />
 	</parent>
 
@@ -167,6 +167,7 @@
 		<netty.version>4.0.26.Final</netty.version>
 		<objenesis.version>2.1</objenesis.version>
 		<ognl.version>2.6.11</ognl.version>
+		<openbeans.version>1.0</openbeans.version>
 		<openid4java.version>0.9.6</openid4java.version>
 		<paho-mqtt-client.version>0.4.0</paho-mqtt-client.version>
 		<paho-mqttv3-client.version>1.0.2</paho-mqttv3-client.version>
