--- a/platform-definition.yaml
+++ b/platform-definition.yaml
@@ -57,7 +57,7 @@ platform_definition:
         - grails-wrapper-support
     - name: Groovy
       groupId: org.codehaus.groovy
-      version: 2.3.11
+      version: 2.4.4
       modules:
         - groovy
         - groovy-ant
@@ -115,7 +115,7 @@ platform_definition:
         repository: https://github.com/spring-projects/spring-amqp
     - name: Spring Batch
       groupId: org.springframework.batch
-      version: 3.0.4.RELEASE
+      version: 3.0.5.RELEASE
       modules:
         - spring-batch-core
         - spring-batch-infrastructure
@@ -126,7 +126,7 @@ platform_definition:
         tagPrefix:
     - name: Spring Boot
       groupId: org.springframework.boot
-      version: 1.2.5.RELEASE
+      version: 1.2.6.RELEASE
       modules:
         - spring-boot
         - spring-boot-actuator
@@ -306,7 +306,7 @@ platform_definition:
         - spring-hateoas
     - name: Spring Integration
       groupId: org.springframework.integration
-      version: 4.1.5.RELEASE
+      version: 4.1.6.RELEASE
       build:
         compileWith: jdk8
         runTestsWith:
@@ -384,12 +384,12 @@ platform_definition:
         - spring-ldap-test
     - name: Spring Loaded
       groupId: org.springframework
-      version: 1.2.3.RELEASE
+      version: 1.2.4.RELEASE
       modules:
        - springloaded
     - name: Spring Mobile
       groupId: org.springframework.mobile
-      version: 1.1.4.RELEASE
+      version: 1.1.5.RELEASE
       modules:
         - spring-mobile-device
     - name: Spring Plugin
@@ -405,7 +405,7 @@ platform_definition:
         - spring-retry
     - name: Spring Security
       groupId: org.springframework.security
-      version: 3.2.7.RELEASE
+      version: 3.2.8.RELEASE
       build:
         repository: https://github.com/spring-projects/spring-security
         tagPrefix:
@@ -451,13 +451,13 @@ platform_definition:
         - spring-social-web
     - name: Spring Social Facebook
       groupId: org.springframework.social
-      version: 2.0.1.RELEASE
+      version: 2.0.2.RELEASE
       modules:
         - spring-social-facebook
         - spring-social-facebook-web
     - name: Spring Social LinkedIn
       groupId: org.springframework.social
-      version: 1.0.1.RELEASE
+      version: 1.0.2.RELEASE
       modules:
         - spring-social-linkedin
     - name: Spring Social Twitter
@@ -478,7 +478,7 @@ platform_definition:
         - spring-webflow
     - name: Spring Web Services
       groupId: org.springframework.ws
-      version: 2.2.1.RELEASE
+      version: 2.2.2.RELEASE
       build:
         repository: https://github.com/spring-projects/spring-ws
         compileWith: jdk8
@@ -500,6 +500,7 @@ platform_definition:
     'rome:rome': 'net.java.dev.rome:rome'
   missing_dependencies:
     ignored_dependencies:
+      - 'com.googlecode:openbeans' # Optional Groovy dependency that is not available in Maven Central
       - 'org.thymeleaf:thymeleaf-spring3' # The Platform is Spring 4+
       - 'org.springframework:spring-instrument-tomcat' # Only needed with Tomcat 6 and the Platform uses Tomcat 7+
       - 'org.springframework.boot:spring-boot-dependencies' # The platform bom is a superset of spring-boot-dependencies
