--- a/platform-definition.yaml
+++ b/platform-definition.yaml
@@ -479,6 +479,7 @@ platform_definition:
       - 'com.fasterxml.jackson.datatype:jackson-datatype-jdk8'
       - 'com.fasterxml.jackson.module:jackson-module-parameter-names'
       - 'com.github.mxab.thymeleaf.extras:thymeleaf-extras-data-attribute'
+      - 'com.hazelcast:hazelcast-hibernate4'
       - 'com.jayway.jsonpath:json-path-assert'
       - 'com.zaxxer:HikariCP'
       - 'io.dropwizard.metrics:metrics-ganglia'
