--- a/platform-definition.yaml
+++ b/platform-definition.yaml
@@ -2,7 +2,7 @@ platform_definition:
   projects:
     - name: Aspect J
       groupId: org.aspectj
-      version: 1.8.6
+      version: 1.8.7
       modules:
         - aspectjweaver
         - aspectjtools
@@ -340,7 +340,7 @@ platform_definition:
         - spring-plugin-metadata
     - name: Spring REST Docs
       groupId: org.springframework.restdocs
-      version: 1.0.0.RC1
+      version: 1.0.0.RELEASE
       modules:
         - spring-restdocs-core
         - spring-restdocs-mockmvc
