--- a/platform-definition.yaml
+++ b/platform-definition.yaml
@@ -472,6 +472,8 @@ platform_definition:
       # For user convenience, Boot provides extra dependency management for modules that both it
       # and the rest of the Platform do not depend upon directly
       - 'ch.qos.logback:logback-access'
+      - 'com.datastax.cassandra:cassandra-driver-core'
+      - 'com.datastax.cassandra:cassandra-driver-mapping'
       - 'com.fasterxml.jackson.dataformat:jackson-dataformat-csv'
       - 'com.fasterxml.jackson.dataformat:jackson-dataformat-yaml'
       - 'com.fasterxml.jackson.datatype:jackson-datatype-hibernate5'
@@ -554,6 +556,7 @@ platform_definition:
       - 'org.hibernate:hibernate-jpamodelgen'
       - 'org.hibernate:hibernate-validator-annotation-processor'
       - 'org.javassist:javassist'
+      - 'org.jboss.logging:jboss-logging'
       - 'org.jooq:jooq-codegen'
       - 'org.jooq:jooq-meta'
       - 'org.mariadb.jdbc:mariadb-java-client'
