Prepare for release of 1.1.4.RELEASE
- Upgrade to Spring Social Twitter 1.1.2.RELEASE to avoid breaking API
  change in 1.1.1.RELEASE
- Remove override of Mockito’s version for compatibility with Powermock
  1.6.2 which is used in Spring LDAP’s tests. This adversely affects
  Spring Security’s tests (see SEC-3127) but using the later version,
  and the one provided by Spring Boot, is preferable.
- Downgrade Axiom to 1.2.14 as Spring Web Services is not compatible
  with 1.2.15 due to the removal of a transitive Java Mail dependency
  in 1.2.15.
- Upgrade the buildPlatform script to support projects that use the
  latest Spring IO plugin which uses the Platform’s bom rather than
  its properties file.

Closes gh-268

--- a/platform-bom/pom.xml
+++ b/platform-bom/pom.xml
@@ -54,6 +54,7 @@
 		<spring-ldap.version>2.0.4.RELEASE</spring-ldap.version>
 		<spring-retry.version>1.1.2.RELEASE</spring-retry.version>
 		<spring-security-oauth.version>2.0.7.RELEASE</spring-security-oauth.version>
+		<spring-social-twitter.version>1.1.2.RELEASE</spring-social-twitter.version>
 		<spring-session.version>1.0.2.RELEASE</spring-session.version>
 		<spring-web-flow.version>2.4.2.RELEASE</spring-web-flow.version>
 		<spring-web-services.version>${spring-ws.version}</spring-web-services.version>
@@ -63,7 +64,7 @@
 		<aopalliance.version>1.0</aopalliance.version>
 		<apacheds.version>1.5.5</apacheds.version>
 		<apache-shared-ldap.version>0.9.15</apache-shared-ldap.version>
-		<axiom.version>1.2.15</axiom.version>
+		<axiom.version>1.2.14</axiom.version>
 		<boon.version>0.23</boon.version>
 		<bouncycastle.version>1.47</bouncycastle.version>
 		<bsf.version>2.4.0</bsf.version>
@@ -154,7 +155,6 @@
 		<lettuce.version>2.3.3</lettuce.version>
 		<lmax-disruptor.version>3.2.1</lmax-disruptor.version>
 		<lombok.version>1.14.8</lombok.version>
-		<mockito.version>1.10.8</mockito.version>
 		<myfaces.version>2.1.17</myfaces.version>
 		<openhft-chronicle.version>2.0.3</openhft-chronicle.version>
 		<openhft-lang.version>6.1.4</openhft-lang.version>
