--- a/platform-bom/pom.xml
+++ b/platform-bom/pom.xml
@@ -6,7 +6,7 @@
 	<parent>
 		<groupId>org.springframework.boot</groupId>
 		<artifactId>spring-boot-starter-parent</artifactId>
-		<version>1.3.0.BUILD-SNAPSHOT</version>
+		<version>1.3.0.RC1</version>
 		<relativePath />
 	</parent>
 
@@ -51,7 +51,6 @@
 		<spring-integration-kafka.version>1.2.0.RELEASE</spring-integration-kafka.version>
 		<spring-integration-splunk.version>1.1.0.RELEASE</spring-integration-splunk.version>
 		<spring-ldap.version>2.0.4.RELEASE</spring-ldap.version>
-		<spring-social-twitter.version>1.1.2.RELEASE</spring-social-twitter.version>
 		<spring-web-flow.version>2.4.2.RELEASE</spring-web-flow.version>
 		<spring-web-services.version>${spring-ws.version}</spring-web-services.version>
 
@@ -1214,15 +1213,15 @@
 
 	<profiles>
 		<profile>
-			<id>spring-snapshots</id>
+			<id>spring-milestones</id>
 			<activation>
 				<activeByDefault>true</activeByDefault>
 			</activation>
 			<repositories>
 				<repository>
-					<id>spring-snapshots</id>
-					<name>Spring Snapshots</name>
-					<url>http://repo.spring.io/libs-snapshot</url>
+					<id>spring-milestones</id>
+					<name>Spring Milestones</name>
+					<url>http://repo.spring.io/libs-milestone</url>
 					<snapshots>
 						<enabled>true</enabled>
 					</snapshots>
