--- a/platform-definition.yaml
+++ b/platform-definition.yaml
@@ -56,7 +56,7 @@ platform_definition:
         tagPrefix:
     - name: Spring Boot
       groupId: org.springframework.boot
-      version: 1.3.0.BUILD-SNAPSHOT
+      version: 1.3.0.RC1
       modules:
         - spring-boot
         - spring-boot-actuator
