--- a/platform-definition.yaml
+++ b/platform-definition.yaml
@@ -54,6 +54,8 @@ platform_definition:
       build:
         repository: https://github.com/spring-projects/spring-batch
         tagPrefix:
+        runTestsWith:
+          - jdk8
     - name: Spring Boot
       groupId: org.springframework.boot
       version: 1.3.0.RC1
