--- a/platform-bom/pom.xml
+++ b/platform-bom/pom.xml
@@ -6,7 +6,7 @@
 	<parent>
 		<groupId>org.springframework.boot</groupId>
 		<artifactId>spring-boot-starter-parent</artifactId>
-		<version>1.3.0.RC1</version>
+		<version>1.3.0.BUILD-SNAPSHOT</version>
 		<relativePath />
 	</parent>
 
@@ -1195,15 +1195,15 @@
 
 	<profiles>
 		<profile>
-			<id>spring-milestones</id>
+			<id>spring-snapshots</id>
 			<activation>
 				<activeByDefault>true</activeByDefault>
 			</activation>
 			<repositories>
 				<repository>
-					<id>spring-milestones</id>
-					<name>Spring Milestones</name>
-					<url>http://repo.spring.io/libs-milestone</url>
+					<id>spring-snapshots</id>
+					<name>Spring Snapshots</name>
+					<url>http://repo.spring.io/libs-snapshot</url>
 					<snapshots>
 						<enabled>true</enabled>
 					</snapshots>
