--- a/platform-definition.yaml
+++ b/platform-definition.yaml
@@ -58,7 +58,7 @@ platform_definition:
           - jdk8
     - name: Spring Boot
       groupId: org.springframework.boot
-      version: 1.3.0.RC1
+      version: 1.3.0.BUILD-SNAPSHOT
       modules:
         - spring-boot
         - spring-boot-actuator
@@ -205,7 +205,7 @@ platform_definition:
         - spring-data-solr
     - name: Spring Framework
       groupId: org.springframework
-      version: 4.2.2.RELEASE
+      version: 4.2.3.BUILD-SNAPSHOT
       modules:
         - spring-aop
         - spring-aspects
@@ -234,7 +234,7 @@ platform_definition:
         - spring-hateoas
     - name: Spring Integration
       groupId: org.springframework.integration
-      version: 4.2.0.RELEASE
+      version: 4.2.1.RELEASE
       build:
         compileWith: jdk8
         runTestsWith:
@@ -346,7 +346,7 @@ platform_definition:
         - spring-retry
     - name: Spring Security
       groupId: org.springframework.security
-      version: 4.0.2.RELEASE
+      version: 4.0.3.CI-SNAPSHOT
       build:
         repository: https://github.com/spring-projects/spring-security
         tagPrefix:
@@ -372,7 +372,7 @@ platform_definition:
        - spring-security-jwt
     - name: Spring Security OAuth
       groupId: org.springframework.security.oauth
-      version: 2.0.7.RELEASE
+      version: 2.0.8.RELEASE
       modules:
         - spring-security-oauth
         - spring-security-oauth2
