Align with latest Spring Boot 1.3.0 snapshots

--- a/platform-definition.yaml
+++ b/platform-definition.yaml
@@ -346,7 +346,7 @@ platform_definition:
         - spring-retry
     - name: Spring Security
       groupId: org.springframework.security
-      version: 4.0.3.CI-SNAPSHOT
+      version: 4.0.3.RELEASE
       build:
         repository: https://github.com/spring-projects/spring-security
         tagPrefix:
