Ensure that the snapshots repository is available when building projects

--- a/scripts/configureRepositories.gradle
+++ b/scripts/configureRepositories.gradle
@@ -1,5 +1,6 @@
 allprojects {
 	repositories {
 		maven { url rootProject.file(repositoryDir) }
+		maven { url 'https://repo.spring.io/libs-snapshot' }
 	}
 }
