--- a/platform-bom/pom.xml
+++ b/platform-bom/pom.xml
@@ -45,6 +45,7 @@
 	</developers>
 
 	<properties>
+		<spring-integration.version>4.3.0.BUILD-SNAPSHOT</spring-integration.version>
 		<spring-integration-flow.version>1.0.0.RELEASE</spring-integration-flow.version>
 		<spring-integration-java-dsl.version>1.1.1.RELEASE</spring-integration-java-dsl.version>
 		<spring-integration-kafka.version>1.2.0.RELEASE</spring-integration-kafka.version>
@@ -158,7 +159,7 @@
 		<rometools.version>1.5.1</rometools.version>
 		<selenium-htmlunit-driver.version>2.46.0</selenium-htmlunit-driver.version>
 		<smack.version>3.2.1</smack.version>
-		<smack4.version>4.0.7</smack4.version>
+		<smack4.version>4.1.5</smack4.version>
 		<snappy.version>1.1.1.7</snappy.version>
 		<splunk.version>1.3.0</splunk.version>
 		<spullara-redis.version>0.7</spullara-redis.version>
@@ -994,6 +995,11 @@
 			<dependency>
 				<groupId>org.igniterealtime.smack</groupId>
 				<artifactId>smack-extensions</artifactId>
+				<version>${smack4.version}</version>
+			</dependency>
+			<dependency>
+				<groupId>org.igniterealtime.smack</groupId>
+				<artifactId>smack-java7</artifactId>
 				<version>${smack4.version}</version>
 			</dependency>
 			<dependency>
