--- a/platform-bom/pom.xml
+++ b/platform-bom/pom.xml
@@ -153,7 +153,7 @@
 		<quartz.version>2.2.2</quartz.version>
 		<querydsl.version>3.6.2</querydsl.version>
 		<rabbit-amqp-client.version>3.4.4</rabbit-amqp-client.version>
-		<rabbit-http-client.version>1.0.0.M1</rabbit-http-client.version>
+		<rabbit-http-client.version>1.0.0.RELEASE</rabbit-http-client.version>
 		<reactive-streams.version>1.0.0.RC5</reactive-streams.version>
 		<rometools.version>1.5.1</rometools.version>
 		<selenium-htmlunit-driver.version>2.46.0</selenium-htmlunit-driver.version>
