--- a/platform-bom/pom.xml
+++ b/platform-bom/pom.xml
@@ -154,7 +154,7 @@
 		<querydsl.version>3.6.9</querydsl.version>
 		<rabbit-amqp-client.version>3.4.4</rabbit-amqp-client.version>
 		<rabbit-http-client.version>1.0.0.RELEASE</rabbit-http-client.version>
-		<reactive-streams.version>1.0.0.RC5</reactive-streams.version>
+		<reactive-streams.version>1.0.0</reactive-streams.version>
 		<rometools.version>1.5.1</rometools.version>
 		<selenium-htmlunit-driver.version>2.46.0</selenium-htmlunit-driver.version>
 		<smack.version>3.2.1</smack.version>
