--- a/platform-tests/pom.xml
+++ b/platform-tests/pom.xml
@@ -6,7 +6,7 @@
 	<parent>
 		<groupId>io.spring.platform</groupId>
 		<artifactId>platform-build</artifactId>
-		<version>1.1.5.BUILD-SNAPSHOT</version>
+		<version>1.1.5.RELEASE</version>
 	</parent>
 
 	<artifactId>platform-tests</artifactId>
