--- a/platform-definition.yaml
+++ b/platform-definition.yaml
@@ -58,7 +58,7 @@ platform_definition:
           - jdk8
     - name: Spring Boot
       groupId: org.springframework.boot
-      version: 1.3.1.BUILD-SNAPSHOT
+      version: 1.3.1.RELEASE
       modules:
         - spring-boot
         - spring-boot-actuator
