--- a/platform-definition.yaml
+++ b/platform-definition.yaml
@@ -126,7 +126,7 @@ platform_definition:
         tagPrefix:
     - name: Spring Boot
       groupId: org.springframework.boot
-      version: 1.2.8.RELEASE
+      version: 1.2.9.BUILD-SNAPSHOT
       modules:
         - spring-boot
         - spring-boot-actuator
