--- a/platform-definition.yaml
+++ b/platform-definition.yaml
@@ -282,7 +282,7 @@ platform_definition:
         - spring-integration-flow
     - name: Spring Integration Java DSL
       groupId: org.springframework.integration
-      version: 1.1.1.RELEASE
+      version: 1.1.2.BUILD-SNAPSHOT
       build:
         repository: https://github.com/spring-projects/spring-integration-java-dsl
         compileWith: jdk8
