--- a/platform-bom/pom.xml
+++ b/platform-bom/pom.xml
@@ -45,6 +45,7 @@
 	</developers>
 
 	<properties>
+		<spring-amqp.version>1.6.0.BUILD-SNAPSHOT</spring-amqp.version>
 		<spring-integration.version>4.3.0.BUILD-SNAPSHOT</spring-integration.version>
 		<spring-integration-flow.version>1.0.0.RELEASE</spring-integration-flow.version>
 		<spring-integration-java-dsl.version>1.1.2.BUILD-SNAPSHOT</spring-integration-java-dsl.version>
