--- a/platform-bom/pom.xml
+++ b/platform-bom/pom.xml
@@ -46,7 +46,7 @@
 
 	<properties>
 		<spring-integration-flow.version>1.0.0.RELEASE</spring-integration-flow.version>
-		<spring-integration-java-dsl.version>1.1.2.BUILD-SNAPSHOT</spring-integration-java-dsl.version>
+		<spring-integration-java-dsl.version>1.1.2.RELEASE</spring-integration-java-dsl.version>
 		<spring-integration-kafka.version>1.2.1.RELEASE</spring-integration-kafka.version>
 		<spring-integration-splunk.version>1.1.0.RELEASE</spring-integration-splunk.version>
 		<spring-ldap.version>2.0.4.RELEASE</spring-ldap.version>
@@ -1192,24 +1192,5 @@
 			</plugin>
 		</plugins>
 	</build>
-
-	<profiles>
-		<profile>
-			<id>spring-snapshots</id>
-			<activation>
-				<activeByDefault>true</activeByDefault>
-			</activation>
-			<repositories>
-				<repository>
-					<id>spring-snapshots</id>
-					<name>Spring Snapshots</name>
-					<url>http://repo.spring.io/libs-snapshot</url>
-					<snapshots>
-						<enabled>true</enabled>
-					</snapshots>
-				</repository>
-			</repositories>
-		</profile>
-	</profiles>
 
 </project>
