--- a/platform-bom/pom.xml
+++ b/platform-bom/pom.xml
@@ -157,6 +157,7 @@
 		<rabbit-amqp-client.version>3.6.0</rabbit-amqp-client.version>
 		<rabbit-http-client.version>1.0.0.RELEASE</rabbit-http-client.version>
 		<reactive-streams.version>1.0.0</reactive-streams.version>
+		<rest-assured.version>2.8.0</rest-assured.version>
 		<rometools.version>1.5.1</rometools.version>
 		<selenium-htmlunit-driver.version>2.46.0</selenium-htmlunit-driver.version>
 		<smack.version>3.2.1</smack.version>
@@ -378,6 +379,11 @@
 				<groupId>com.jamonapi</groupId>
 				<artifactId>jamon</artifactId>
 				<version>${jamon.version}</version>
+			</dependency>
+			<dependency>
+				<groupId>com.jayway.restassured</groupId>
+				<artifactId>rest-assured</artifactId>
+				<version>${rest-assured.version}</version>
 			</dependency>
 			<dependency>
 				<groupId>com.jcraft</groupId>
