--- a/platform-definition.yaml
+++ b/platform-definition.yaml
@@ -456,15 +456,13 @@ platform_definition:
     'rome:rome': 'net.java.dev.rome:rome'
   missing_dependencies:
     ignored_dependencies:
-      - 'org.scala-lang:scala-library' # Breaking changes in minor versions prevent its inclusion
-      - 'org.springframework:spring-instrument-tomcat' # Only needed with Tomcat 6 and the Platform uses Tomcat 7+
-      - 'org.springframework.boot:spring-boot-dependencies' # The platform bom is a superset of spring-boot-dependencies
-      - 'org.springframework.boot:spring-boot-starter-parent' # The platform bom is a superset of spring-boot-starter-parent
-      - 'org.springframework.data.build:spring-data-java8-stub' # Not included in Spring Data Bom
-      - 'org.thymeleaf:thymeleaf-spring3' # The Platform is Spring 4+
+      'org.springframework.data:spring-data-commons':
+        - 'org.scala-lang:scala-library'
     ignored_modules:
       - 'org.springframework.boot:spring-boot-actuator-docs' # Its dependencies are provided
       - 'org.springframework.boot:spring-boot-cli' # The CLI doesn't expose its dependencies to applications
+      - 'org.springframework.boot:spring-boot-dependencies' # The Platform inherits spring-boot-dependencies via spring-boot-starter-parent
+      - 'org.springframework.boot:spring-boot-starter-parent' # Used by the Platform as its parent
       - 'org.springframework.boot:spring-boot-maven-plugin' # The plugin doesn't expose it dependencies to applications
       - 'org.springframework.boot:spring-boot-configuration-processor' # Used by the Boot build to generate metadata about @ConfigurationProperties
   unused_dependencies:
