--- a/platform-definition.yaml
+++ b/platform-definition.yaml
@@ -37,7 +37,7 @@ platform_definition:
           - jdk8
     - name: Spring AMQP
       groupId: org.springframework.amqp
-      version: 1.6.0.BUILD-SNAPSHOT
+      version: 1.6.0.M1
       modules:
         - spring-amqp
         - spring-rabbit
@@ -236,7 +236,7 @@ platform_definition:
         - spring-hateoas
     - name: Spring Integration
       groupId: org.springframework.integration
-      version: 4.3.0.BUILD-SNAPSHOT
+      version: 4.3.0.M1
       build:
         compileWith: jdk8
         runTestsWith:
